--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,3 +1,19 @@
+* {
+  margin: 0;
+}
+
+.appContainer{
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 38px auto;
+}
+
+.appMain{
+  display: grid;
+  grid-template-columns: 260px auto;
+}
+
 .App {
   text-align: center;
 }
