--- a/client/src/model_ui/Sidebar.css
+++ b/client/src/model_ui/Sidebar.css
@@ -7,6 +7,7 @@ aside {
 }
 
 /* server list */
+
 #server-list {
     width: 60px;
     height: 100%;
@@ -14,22 +15,36 @@ aside {
     display: flex;
     flex-direction: column;
     align-items: center;
+    -webkit-user-select: none;
+    /* Chrome all / Safari all */
+    -moz-user-select: none;
+    /* Firefox all */
+    -ms-user-select: none;
+    /* IE 10+ */
+    user-select: none;
+}
+
+#server-list a {
+    width: 45px;
+    height: 45px;
+    margin-top: 8px;
 }
 
 #server-list img {
     width: 45px;
     height: 45px;
     object-fit: cover;
-    margin-top: 8px;
     border-radius: 10px;
 }
 
 #eridium-logo {
+    margin-top: 8px;
     border-bottom: 1px solid var(--shaded-color-6);
     padding-bottom: 4px;
 }
 
 /* content list */
+
 #content-list {
     width: 250px;
     height: 100%;
@@ -39,13 +54,33 @@ aside {
 #server-banner {
     width: 100%;
     height: var(--banner-height);
-    box-shadow: 0 4px 2px -1px var(--shaded-color-0);
+    color: #fff;
+    box-shadow: 0 3px 2px -1px var(--shaded-color-0);
     display: flex;
     align-items: center;
+    -webkit-user-select: none;
+    /* Chrome all / Safari all */
+    -moz-user-select: none;
+    /* Firefox all */
+    -ms-user-select: none;
+    /* IE 10+ */
+    user-select: none;
+}
+
+#server-banner:hover {
+    background-color: var(--shaded-color-3a);
+    cursor: pointer;
 }
 
 #server-banner p {
-    color: #fff;
+    width: 200px;
     font-size: 18px;
     padding-left: 8px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#server-banner span {
+    margin-right: 8px;
 }
