--- a/client/src/model_ui/Content.css
+++ b/client/src/model_ui/Content.css
@@ -14,6 +14,7 @@ main {
     box-shadow: 0 3px 2px -1px var(--shaded-color-0);
     display: flex;
     align-items: center;
+    color: #fff;
     -webkit-user-select: none;
     /* Chrome all / Safari all */
     -moz-user-select: none;
@@ -23,10 +24,24 @@ main {
     user-select: none;
 }
 
-#content-banner p {
-    color: #fff;
+#content-banner > * {
+    padding-left: 12px;
+}
+
+#channel-type-icon {
+    color: var(--shaded-color-3);
+    font-weight: 500;
+    font-size: 28px;
+}
+
+#channel-name {
     font-size: 18px;
-    padding-left: 8px;
+}
+
+#channel-description {
+    font-weight: bold;
+    font-size: 16px;
+    color: var(--shaded-color-5);
 }
 
 /* content (messages) */
