--- a/client/src/model_ui/Sidebar.css
+++ b/client/src/model_ui/Sidebar.css
@@ -51,6 +51,8 @@ aside {
     background-color: var(--shaded-color-2);
 }
 
+/* banner */
+
 #server-banner {
     width: 100%;
     height: var(--banner-height);
@@ -83,4 +85,83 @@ aside {
 
 #server-banner span {
     margin-right: 8px;
+}
+
+/* content channels */
+
+.content-category {
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+.category-name {
+    padding-left: 5px;
+    color: var(--primary-color);
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+.category-name p {
+    padding-left: 5px;
+}
+
+.category-channel {
+    height: 30px;
+    /* margin-top: 2px; */
+    color: var(--shaded-color-5);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#text-channels .category-channel {
+    padding-left: 19px;
+}
+
+#voice-channels .category-channel {
+    padding-left: 15px;
+}
+
+#direct-message-channels .category-channel {
+    padding-left: 18px;
+}
+
+#text-channels .category-channel p {
+    margin-left: 6px;
+}
+
+#voice-channels .category-channel p {
+    margin-left: 13px;
+}
+
+#direct-message-channels .category-channel p {
+    margin-left: 14px;
+}
+
+.category-channel:hover {
+    color: var(--shaded-color-6);
+    background-color: var(--shaded-color-3a);
+    cursor: pointer;
+}
+
+.category-channel p {
+    font-weight: bold;
+}
+
+#active-channel {
+    color: var(--shaded-color-6);
+    background-color: var(--primary-color);
+}
+
+.text-channel-prefix {
+    font-size: 20px;
+    margin-right: 15px;
+}
+
+.category-channel img {
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
+    border-radius: 2px;
 }
