--- a/client/src/model_ui/Content.css
+++ b/client/src/model_ui/Content.css
@@ -15,13 +15,6 @@ main {
     display: flex;
     align-items: center;
     color: #fff;
-    -webkit-user-select: none;
-    /* Chrome all / Safari all */
-    -moz-user-select: none;
-    /* Firefox all */
-    -ms-user-select: none;
-    /* IE 10+ */
-    user-select: none;
 }
 
 #content-banner > * {
@@ -39,9 +32,15 @@ main {
 }
 
 #channel-description {
-    font-weight: bold;
     font-size: 16px;
-    color: var(--shaded-color-5);
+    color: var(--shaded-color-5a);
+}
+
+/* content */
+
+#content {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 /* content (messages) */
