--- a/client/src/model_ui/Content.css
+++ b/client/src/model_ui/Content.css
@@ -102,7 +102,7 @@ main {
     align-items: flex-start;
 }
 
-.message-container img {
+.message-profile-pic {
     width: 50px;
     height: 50px;
     object-fit: cover;
@@ -137,6 +137,15 @@ main {
 .message-content p {
     margin-top: 10px;
     margin-bottom: 0px;
+}
+
+.image-name {
+    color: var(--shaded-color-5);
+}
+
+.message-content img {
+    margin-top: 5px;
+    max-width: 100%;
 }
 
 .usertag {
