hovering messages and slight adjustments savepoint

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
   --shaded-color-3: #352D37;
   --shaded-color-3a: #362e38;
   --shaded-color-4: #493E4B;
+  --shaded-color-4a: #413742;
   --shaded-color-5: #7B7B7B;
   --shaded-color-5a: #b8b8b8;
   --shaded-color-6: #FFFFFF;
