--- a/client/src/model_ui/Content.css
+++ b/client/src/model_ui/Content.css
@@ -53,14 +53,13 @@ main {
     width: 100%;
     padding: 0px 0px 25px 0px;
     height: calc(100vh - var(--banner-height) - 25px);
-    overflow-y: auto;
-    scrollbar-width: thin;
-    scrollbar-color: var(--shaded-color-0) rgba(255,255,255,0);
 }
 
 #main-content ul {
-    height: 100%;
+    height: calc(100% - 80px - 25px);
     width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
     padding: 0;
     margin: 0;
     list-style: none;
@@ -68,6 +67,8 @@ main {
     -webkit-flex-direction: column-reverse;
     flex-direction: column-reverse;
     float: bottom;
+    scrollbar-width: thin;
+    scrollbar-color: var(--shaded-color-0) rgba(255,255,255,0);
 }
 
 #main-content li {
@@ -88,7 +89,10 @@ main {
 /* content input */
 
 #input-container {
-    width: 100%;
+    position: absolute;
+    bottom: 25px;
+    padding: 0px 25px;
+    width: calc(100vw - 310px - 50px);
 }
 
 #input-container {
