server banner dropdown complete, fixed class name errors

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,10 @@
   --primary-color: #C868E2;
   --secondary-color: #572852;
   --tertiary-color: #411D3D;
+  --warning-color: #dd4e4e;
   --shaded-color-0: #201B21;
   --shaded-color-1: #28202A;
+  --shaded-color-1a: #1f1820;
   --shaded-color-2: #2F2831;
   --shaded-color-3: #352D37;
   --shaded-color-3a: #362e38;
