--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -11,6 +11,7 @@
     padding: 25px;
     position: absolute;
     width: 600px;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,7 +28,7 @@
 
 .form-inputs {
     width: 100%;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .form-inputs > * {
@@ -62,7 +63,7 @@
 }
 
 .form-input-btn {
-    color: var(--shaded-color-3);
+    color: var(--shaded-color-4);
     background: var(--primary-color);
     font-size: 18px;
     padding: 8px 50px;
