messages render and add to bottom and disappera

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -29,6 +29,7 @@ aside {
 
 #server-list .server-icon:hover {
     border-color: var(--shaded-color-5);
+    cursor: pointer;
 }
 
 #server-list #active-server {
