can click on other servers and the first server is set as default when the page loads

--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -25,6 +25,7 @@ aside {
     border-radius: 12px;
     overflow: hidden;
     padding: 1px;
+    background-color: var(--shaded-color-0);
 }
 
 #server-list .server-icon:hover {
