--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -78,6 +78,7 @@ aside {
 
 #server-banner-button {
     height: 100%;
+    font-weight: 500;
     display: flex;
     align-items: center;
 }
@@ -122,7 +123,7 @@ aside {
     margin: 0px;
     padding-left: 8px;
     text-align: left;
-    font-weight: bold;
+    font-weight: 500;
     font-size: 16px;
 }
 
@@ -252,7 +253,7 @@ aside {
 }
 
 .category-channel p {
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .add-channel-icon:hover {
