--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -74,3 +74,9 @@
     cursor: pointer;
     border: none;
 }
+
+@media only screen and (max-width: 600px) {
+    .form {
+        max-width: 80vw;
+    }
+}
